@@ -12,10 +12,9 @@ import java.util.List;
 import com.github.javaparser.StaticJavaParser;
 import com.github.javaparser.ast.CompilationUnit;
 import com.github.javaparser.ast.body.ClassOrInterfaceDeclaration;
+import com.github.javaparser.ast.body.InitializerDeclaration;
 import com.github.javaparser.ast.body.MethodDeclaration;
 import com.github.javaparser.ast.visitor.VoidVisitorAdapter;
-import com.github.javaparser.symbolsolver.javaparsermodel.contexts.ClassOrInterfaceDeclarationContext;
-import com.google.common.io.Files;
 
 public class JavaClass extends VoidVisitorAdapter<Void> {
 
@@ -49,31 +48,25 @@ public class JavaClass extends VoidVisitorAdapter<Void> {
 	@Override
 	public void visit(ClassOrInterfaceDeclaration cd, Void arg) {
 		super.visit(cd, arg);
-		size = cd.getRange().map(range -> range.end.line - range.begin.line).orElse(0);
-		BufferedReader br;
-		try {
-			br = new BufferedReader(new FileReader(file));
-			String line;
-			int empty = 0;
-			while ((line = br.readLine()) != null) {
-				if (line.trim().isEmpty()) {
-					empty++;
-				}
-			}
-			size = size - empty + 1;
-			System.out.println(empty);
-		} catch (FileNotFoundException e1) {
-			e1.printStackTrace();
-		} catch (IOException e) {
-			e.printStackTrace();
+		String[] lines = cd.toString().split("\r\n|\r|\n");
+		int counter = 0;
+		for(String s : lines) {
+			if(s.isBlank())
+				counter++;
 		}
-		System.out.println("A classe " + name + " tem: " + size);
+		size=lines.length-counter;
+		System.out.println(name + " " + size);
 	}
 
 	private void getMethods() throws FileNotFoundException {
 		final CompilationUnit comp = StaticJavaParser.parse(file);
 		visit(comp, null);
 	}
+	
+	public int getLOCClass() {
+		return size;
+	}
+	
 
 	public int getNOMClass() {
 		return methods_list.size();
